--- a/Readme
+++ b/Readme
@@ -1,1 +1,12 @@
-
+:Feasibility Study & Project Proposal •
+.At this point, you will conduct a study to determine the feasibility of developing a Hangrytician app •
+:Project Requirements •
+You will define requirements for the Hangrytician application based on thorough analysis of the needs of the users, •
+.restaurant owners, and delivery team
+:Activities Diagram •
+.You will create an activities chart to visualize the workflow and different activities in the Hangrytician app •
+:Project Use Case Modeling •
+You will model use cases for a Hangrytician application using techniques such as use case diagrams. You will identify •
+.and document various use cases and their associated relationships between actors, systems and processes
+:Creating Sequence Diagrams •
+You will create sequence diagrams to visualize the sequence of messages and interactions •
